--- a/coursework2/block09/careerSimulation/style.css
+++ b/coursework2/block09/careerSimulation/style.css
@@ -18,6 +18,9 @@ h2 {
 
     color: rgb(209, 220, 220);
     text-align: center;
+    padding: 15px;
+    margin: 10px;
+    border: 1px silver solid;
 
 }
 
@@ -46,10 +49,14 @@ h2 {
 
 }
 
-.card{
+.card {
 
-display: flex;
-justify-content: center;
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+    margin: 10px;
+    border: 1px silver solid;
+    background-color: rgb(58, 4, 34);
 }
 
 footer {
@@ -72,5 +79,39 @@ footer {
 
     padding: 5px;
     margin: 5px;
+    border: 1px silver solid;
+}
+
+.improv {
+    width: 30%;
+    height: 30%;
+    float: right;
+    padding: 15px;
+    margin: 10px;
+    border: 1px silver solid;
+
+}
+
+.center {
+
+
+
+    padding: 15px;
+    margin: 10px;
+    border: 1px silver solid;
+    background-color: rgb(58, 4, 34);
+}
+
+p {
+    color: rgb(209, 220, 220);
+}
+
+.performer {
+
+    width: 30%;
+    height: 30%;
+    float: left;
+    padding: 15px;
+    margin: 10px;
     border: 1px silver solid;
 }
