--- a/coursework2/block10/workshop/code/external.css
+++ b/coursework2/block10/workshop/code/external.css
@@ -1,6 +1,6 @@
-.navbar{
+.navbar {
 
-    color:rgb(234, 16, 158);
+    color: rgb(232, 22, 186);
     transition: color 0.2s;
     text-decoration: none;
     display: block;
@@ -12,43 +12,99 @@
 
 .navbar:hover {
 
-    color:rgb(212, 193, 212)
-
+    color: rgb(212, 193, 212)
 }
 
-h2, h3{
+h2,
+h3 {
 
     text-align: center;
     color: aliceblue;
     font-family: sans-serif;
 }
 
-p{
+p {
 
     text-align: center;
     color: aliceblue;
     font-family: sans-serif;
 }
 
-form{
+form {
 
     display: flex;
     justify-content: space-between;
     color: aliceblue;
     font-family: sans-serif;
 
-    
+
 }
 
-body{
+
+
+body {
 
     background-image: url(art4.jpg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
 
-.art{
+.artcontainer {
 
-container: flex;
-justify-content: space-evenly;
+    height: 90%;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 5px;
+    border: medium solid rgb(232, 22, 186);
+    /* margin-top: 15%;
+    margin-bottom: 15%; */
+    align-items: center;
+}
+
+img {
+
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 50;
+}
+
+.art5 {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    margin-left: 40%;
+}
+
+.art6 {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    margin-right: 40%;
+}
+
+.art7 {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    margin-left: 40%;
+}
+
+.art8 {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    margin-right: 40%;
+}
+
+.myart {
+
+    height: 90%;
+    width: 60%;
+    border: medium solid rgb(255, 255, 255);
+
 }
