--- a/coursework2/block28/react-router/src/index.css
+++ b/coursework2/block28/react-router/src/index.css
@@ -35,3 +35,9 @@ body > div {
   background-color: #275db3;
   color: white;
 }
+
+.home {
+background-color: rgb(167, 108, 167);
+color: white;
+
+}
