--- a/coursework2/block28/react-router/src/index.css
+++ b/coursework2/block28/react-router/src/index.css
@@ -1,4 +1,5 @@
-*{ font-family: arial, sans-serif;
+* {
+  font-family: arial, sans-serif;
   margin: 0;
 }
 body,
@@ -7,37 +8,56 @@ body > div {
   width: 100vw;
 }
 #container {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 #container > div {
   display: flex;
+  
 }
 #navbar {
-  padding: 2em;
-  justify-content: space-evenly;
+  display: flexbox;
+  flex-direction: column;
+  padding: 1em;
+  gap: 0.5em;
 }
-#main-section {
-  flex-grow: 1;
-}
-#main-section > div {
-  width: 100%;
+.red {
+
+  height: 100vh;
+  width: 100vw;
+  background-color: #b05f6d;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.red {
-  background-color: #b05f6d;
-  color: white;
-}
 .blue {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
   background-color: #275db3;
   color: white;
 }
 
 .home {
-background-color: rgb(167, 108, 167);
-color: white;
+ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(167, 108, 167);
+  color: white;
+}
 
+#footer {
+
+  display: flexbox;
+  flex-direction: row;
 }
